--- a/APP/templates/index.html
+++ b/APP/templates/index.html
@@ -43,11 +43,11 @@
     <div class="&lt;!--container--&gt;">
      <div class="top-bar-left">
       <div class="top-bar-body">
-       <a class="logo" href="index.html">
+       <a class="logo" href="{% url 'APP:index' %}">
         <img alt="" src="{% static 'assets/img/logo.png' %}"/>
        </a>
        <h1 class="website-title">
-        <a data-hover="Autobuy" href="index.html">
+        <a data-hover="Autobuy" href="{% url 'APP:index' %}">
          Autobuy
         </a>
        </h1>
@@ -75,15 +75,23 @@
      <div class="sub-top-bar sub-top-bar-mobile visible-xs-block">
       <div class="&lt;!--container--&gt;">
        <div class="block block-black block-left-up">
-        <a class="btn-custom vert-line-l-r vert-line-orange link-effect-1" data-hover="Submit Listing" href="submit-listing">
+         {% if user.is_authenticated %}
+        <a class="btn-custom vert-line-l-r vert-line-orange link-effect-1" data-hover="Submit Listing" href="{% url 'APP:submit_listing' %}">
          Submit Listing
         </a>
+        {% endif %}
         <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Register" data-target="#registr-form" data-toggle="modal" href="#">
          Register
         </a>
+        {% if user.is_authenticated %}
+        <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Login" data-target="#login-form" data-toggle="modal" href="{% url 'APP:profile' %}">
+         Profile
+        </a>
+        {% else %}
         <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Login" data-target="#login-form" data-toggle="modal" href="#">
          Login
         </a>
+        {% endif %}
         <button class="navbar-toggle" id="toggle-mainmenu" type="button">
          <span class="sr-only">
           Toggle navigation
@@ -99,30 +107,7 @@
          <a class="search-btn" href="#">
          </a>
         </div>
-        <div class="lang-manu dropdown">
-         <button class="btn dropdown-toggle" data-toggle="dropdown" type="button">
-          <img alt="" src="{% static 'assets/img/flags/en.png' %}"/>
-          <span>
-           EN
-          </span>
-          <span class="caret">
-          </span>
-         </button>
-         <ul class="dropdown-menu">
-          <li>
-           <a class="dropdown-item" href="#">
-            <img alt="" src="{% static 'assets/img/flags/en.png' %}"/>
-            EN
-           </a>
-          </li>
-          <li>
-           <a class="dropdown-item" href="#">
-            <img alt="" src="{% static 'assets/img/flags/hr.png' %}"/>
-            HR
-           </a>
-          </li>
-         </ul>
-        </div>
+
         <!-- /.lang menu -->
        </div>
       </div>
@@ -150,44 +135,43 @@
            <span class="caret">
            </span>
           </a>
+
+
+
+
           <ul class="dropdown-menu">
            <li>
-            <a href="homepage-realestates.html">
-             Real Estate
+            <a onclick="showOutput2()">
+             Automobiles
             </a>
            </li>
            <li>
-            <a href="homepage-yacht-market.html">
-             Yacht Market
+            <a  onclick="showOutput3()">
+             Trucks
             </a>
            </li>
            <li>
-            <a href="homepage-cars.html">
-             Car Dealer
+            <a onclick="showOutput4()">
+          Tractor
             </a>
            </li>
            <li>
-            <a href="homepage-jobs.html">
-             Job Finder
+            <a onclick="showOutput5()">
+             Moped
             </a>
            </li>
            <li>
-            <a href="map_business.html">
-             Business Directory
-            </a>
-           </li>
-           <li>
-            <a href="homepage_classified.html">
-             Classified Portal
-            </a>
-           </li>
-           <li>
-            <a href="homepage-shop.html">
-             Basic shop
+            <a onclick="showOutput6()">
+             Bus
             </a>
            </li>
           </ul>
          </li>
+         <li class="nav-item dropdown dropdown-mega">
+          <a class="dropdown-toggle" href="{% url 'APP:blog_list' %}">
+           Articles
+          </a>
+        </li>
          <li class="nav-item dropdown dropdown-mega">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">
            Featured
@@ -196,25 +180,30 @@
            <div class="container">
             <div class="widget-content properties-grid">
              <div class="row">
+               {% for item in featured %}
               <div class="col-md-3 col-sm-6">
                <div class="thumbnail thumbnail-property features">
                 <div class="property-image">
-                 <img alt="car" src="{% static 'assets/img/placeholders/400x300.png' %}"/>
+                  {% for i in item.image.all %}
+                 {% if forloop.first %}
+                 <img alt="car" src="{% get_media_prefix %}{{i.image}}"/>
+                 {% endif %}
+                 {% endfor %}
                  <div class="image-count">
                   <i class="icon-image">
                   </i>
                   <span>
-                   2
+                   {{item.image.all.count}}
                   </span>
                  </div>
                  <div class="budget budget-used">
                   <div class="budget-mask">
                    <span>
-                    Used
+                    {{item.use_state}}
                    </span>
                   </div>
                  </div>
-                 <a class="property-image-hover" href="listing.html">
+                 <a class="property-image-hover" href="{{item.get_absolute_url}}">
                   <span class="property-im-m property-im-m-lt">
                   </span>
                   <span class="property-im-m property-im-m-lb">
@@ -228,165 +217,40 @@
                 <div class="caption">
                  <h3 class="property-title">
                   <a href="listing.html">
-                   Fast car 1,6 TDI DSG
+                   {{item.title}}
                   </a>
                  </h3>
                  <p class="property-description">
-                  2014. g. 39.138 km, 66kW/90KS
+                  {{item.model_year}}. g. {{item.speed}} km, {{item.power}}kW/KS
                  </p>
                  <span class="property-field">
-                  114.630 km
+                  {{item.model}}
                  </span>
                  <div class="property-ratings">
-                  <i class="icon-star-ratings-1">
+                  <i class="icon-star-ratings-{{item.rating}}">
                   </i>
                  </div>
                 </div>
                </div>
               </div>
-              <div class="col-md-3 col-sm-6">
-               <div class="thumbnail thumbnail-property features">
-                <div class="property-image">
-                 <img alt="car" src="{% static 'assets/img/placeholders/400x300.png' %}"/>
-                 <div class="image-count">
-                  <i class="icon-image">
-                  </i>
-                  <span>
-                   2
-                  </span>
-                 </div>
-                 <div class="budget budget-used">
-                  <div class="budget-mask">
-                   <span>
-                    Used
-                   </span>
-                  </div>
-                 </div>
-                 <a class="property-image-hover" href="listing.html">
-                  <span class="property-im-m property-im-m-lt">
-                  </span>
-                  <span class="property-im-m property-im-m-lb">
-                  </span>
-                  <span class="property-im-m property-im-m-rt">
-                  </span>
-                  <span class="property-im-m property-im-m-rb">
-                  </span>
-                 </a>
-                </div>
-                <div class="caption">
-                 <h3 class="property-title">
-                  <a href="listing.html">
-                   Blue car  1,6 TDI DSG
-                  </a>
-                 </h3>
-                 <p class="property-description">
-                  2012. g. 39.138 km, 70kW/80KS
-                 </p>
-                 <span class="property-field">
-                  204.630 km
-                 </span>
-                 <div class="property-ratings">
-                  <i class="icon-star-ratings-3">
-                  </i>
-                 </div>
-                </div>
-               </div>
-              </div>
-              <div class="col-md-3 col-sm-6">
-               <div class="thumbnail thumbnail-property features">
-                <div class="property-image">
-                 <img alt="car" src="{% static 'assets/img/placeholders/400x300.png' %}"/>
-                 <div class="image-count">
-                  <i class="icon-image">
-                  </i>
-                  <span>
-                   2
-                  </span>
-                 </div>
-                 <div class="budget budget-damage">
-                  <div class="budget-mask">
-                   <span>
-                    Damaged
-                   </span>
-                  </div>
-                 </div>
-                 <a class="property-image-hover" href="listing.html">
-                  <span class="property-im-m property-im-m-lt">
-                  </span>
-                  <span class="property-im-m property-im-m-lb">
-                  </span>
-                  <span class="property-im-m property-im-m-rt">
-                  </span>
-                  <span class="property-im-m property-im-m-rb">
-                  </span>
-                 </a>
-                </div>
-                <div class="caption">
-                 <h3 class="property-title">
-                  <a href="listing.html">
-                   Blue car A1  3,5 TDI DSG
-                  </a>
-                 </h3>
-                 <p class="property-description">
-                  2015.g. 19.13 km, 68kW/70KS
-                 </p>
-                 <span class="property-field">
-                  14.630 km
-                 </span>
-                 <div class="property-ratings">
-                  <i class="icon-star-ratings-2">
-                  </i>
-                 </div>
-                </div>
-               </div>
-              </div>
-              <div class="col-md-3 col-sm-6">
-               <div class="thumbnail thumbnail-property">
-                <div class="property-image">
-                 <img alt="car" src="{% static 'assets/img/placeholders/400x300.png' %}"/>
-                 <div class="image-count">
-                  <i class="icon-image">
-                  </i>
-                  <span>
-                   2
-                  </span>
-                 </div>
-                 <a class="property-image-hover" href="listing.html">
-                  <span class="property-im-m property-im-m-lt">
-                  </span>
-                  <span class="property-im-m property-im-m-lb">
-                  </span>
-                  <span class="property-im-m property-im-m-rt">
-                  </span>
-                  <span class="property-im-m property-im-m-rb">
-                  </span>
-                 </a>
-                </div>
-                <div class="caption">
-                 <h3 class="property-title">
-                  <a href="listing.html">
-                   Fast car A6 4,6 TDI DSG
-                  </a>
-                 </h3>
-                 <p class="property-description">
-                  2015.g. 19.00 km, 68GmbH/70
-                 </p>
-                 <span class="property-field">
-                  24.000 km
-                 </span>
-                 <div class="property-ratings">
-                  <i class="icon-star-ratings-5">
-                  </i>
-                 </div>
-                </div>
-               </div>
-              </div>
+              {% endfor %}
+              <a class="btn btn-custom btn-custom-primary color-primary" href="{% url 'APP:featured' %}">See all</a>
              </div>
             </div>
             <!-- /. recent properties -->
            </div>
           </div>
          </li>
+         <li class="nav-item dropdown dropdown-mega">
+          <a class="dropdown-toggle" href="{% url 'APP:dealers' %}">
+           Dealers
+          </a>
+        </li>
+        <li class="nav-item dropdown dropdown-mega">
+         <a class="dropdown-toggle" href="{% url 'APP:contact' %}">
+          Contact
+         </a>
+       </li>
           </ul>
          </li>
         </ul>
@@ -426,57 +290,23 @@
    <div class="sub-top-bar overflow hidden-xs">
     <div class="&lt;!--container--&gt;">
      <div class="block block-black block-left-up">
-      <a class="btn-custom vert-line-l-r vert-line-orange link-effect-1" data-hover="Submint Listing" href="submit-listing">
+       {% if user.is_authenticated %}
+      <a class="btn-custom vert-line-l-r vert-line-orange link-effect-1" data-hover="Submit Listing" href="{% url 'APP:submit_listing' %}">
        Submit Listing
       </a>
+      {% endif %}
       <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Register" data-target="#registr-form" data-toggle="modal" href="#">
        Register
       </a>
+      {% if user.is_authenticated %}
+      <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1"  href="profile">
+       Profile
+      </a>
+      {% else %}
       <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Login" data-target="#login-form" data-toggle="modal" href="#">
        Login
       </a>
-      <div class="lang-manu lang-manu-custom dropdown">
-       <button class="btn dropdown-toggle" data-toggle="dropdown" type="button">
-        <img alt="" src="{% static 'assets/img/flags/en.png' %}"/>
-        <span>
-         EN
-        </span>
-        <span class="caret">
-        </span>
-       </button>
-       <ul class="dropdown-menu">
-        <li>
-         <a class="dropdown-item" href="#">
-          <img alt="" src="{% static 'assets/img/flags/en.png' %}"/>
-          English
-         </a>
-        </li>
-        <li>
-         <a class="dropdown-item" href="#">
-          <img alt="" src="{% static 'assets/img/flags/hr.png' %}"/>
-          Hrvatska
-         </a>
-        </li>
-        <li>
-         <a class="dropdown-item" href="#">
-          <img alt="" src="{% static 'assets/img/flags/ru.png' %}"/>
-          Russian
-         </a>
-        </li>
-        <li>
-         <a class="dropdown-item" href="#">
-          <img alt="" src="{% static 'assets/img/flags/au.png' %}"/>
-          Australia
-         </a>
-        </li>
-        <li>
-         <a class="dropdown-item" href="#">
-          <img alt="" src="{% static 'assets/img/flags/fi.png' %}"/>
-          Finland
-         </a>
-        </li>
-       </ul>
-      </div>
+      {% endif %}
       <!-- /.lang menu -->
      </div>
     </div>
@@ -781,11 +611,6 @@ function search () {
            </i>
            Search
           </button>
-          <button class="btn btn-custom btn-custom-warning" type="button">
-           <i class="fa fa-floppy-o">
-           </i>
-           Save
-          </button>
          </div>
        </div>
       </div>
@@ -961,45 +786,37 @@ function search () {
         </div>
         <nav aria-label="Page navigation" class="text-center">
          <ul class="pagination">
+             {% if page_obj.has_next %}
           <li>
-           <a aria-label="Previous" href="#">
+           <a aria-label="Previous" href="?page={{ page_obj.previous_page_number }}">
             <span aria-hidden="true">
              «
             </span>
            </a>
           </li>
+          {% endif %}
           <li>
-           <a class="active" href="#">
-            1
+           <a class="active" href="?page=1">
+            {{ page_obj.number }}
            </a>
           </li>
+          {% if page_obj.has_next %}
           <li>
-           <a href="#">
+           <a href="?page={{ page_obj.next_page_number }}">
             2
            </a>
           </li>
-          <li>
-           <a href="#">
-            3
-           </a>
+          {% endif %}
           </li>
+          {% if page_obj.has_next %}
           <li>
-           <a href="#">
-            4
-           </a>
-          </li>
-          <li>
-           <a href="#">
-            5
-           </a>
-          </li>
-          <li>
-           <a aria-label="Next" href="#">
+           <a aria-label="Next" href="?page={{ page_obj.next_page_number }}">
             <span aria-hidden="true">
              »
             </span>
            </a>
           </li>
+          {% endif %}
          </ul>
         </nav>
        </div>
@@ -1086,33 +903,33 @@ function search () {
       <div class="custom-box box-quicle-menu col-md-3 col-sm-6">
        <div class="custom-box-title vert-line-r-l vert-line-primary">
         <h2>
-         World Dealers
+         Quick Links
         </h2>
        </div>
        <div class="custom-box-content">
         <ul class="list">
          <li>
-          <a href="index.html">
+          <a href="{% url 'APP:index' %}">
            Home
           </a>
          </li>
          <li>
-          <a href="slider_standard.html">
-           Search
-          </a>
-         </li>
-         <li>
-          <a href="page_agents.html">
+          <a href="{% url 'APP:dealers' %}">
            Dealers
           </a>
          </li>
          <li>
-          <a href="page_featured.html">
-           Featuread Pages
+          <a href="{% url 'APP:blog_list' %}">
+           Blogs
           </a>
          </li>
          <li>
-          <a href="page_contact.html">
+          <a href="{% url 'APP:featured' %}">
+           Featured
+          </a>
+         </li>
+         <li>
+          <a href="{% url 'APP:contact' %}">
            Contact
           </a>
          </li>
