--- a/APP/templates/mylistings.html
+++ b/APP/templates/mylistings.html
@@ -1,41 +1,41 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="zxx">
-    <head>
-        <meta charset="UTF-8" />
-        <title>My Listings page</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css" />
-        <link rel="stylesheet" href="assets/libraries/font-awesome/css/font-awesome.min.css" />
-        <!--[if lt IE 10]>
-        <link rel="stylesheet"  href="assets/css/ie-fix.css" />
-        <![endif]-->
-        <!-- Start BOOTSTRAP -->
-        <link rel="stylesheet" href="{% static 'assets/libraries/tether/dist/css/tether.min.css' %}" />
-        <link rel="stylesheet" href="{% static 'assets/libraries/bootstrap/dist/css/bootstrap.min.css' %}" />
-        <link rel="stylesheet" href="{% static 'assets/css/bootstrap-select.min.css' %}" />
-        <link rel="stylesheet" href="{% static 'assets/libraries/bootstrap-colorpicker-master/dist/css/bootstrap-colorpicker.min.css' %}" />
-        <!-- End Bootstrap -->
-        <!-- Start Template files -->
-        <link rel="stylesheet" href="{% static 'assets/css/world-dealer.css' %}" />
-        <link rel="stylesheet" href="{% static 'assets/css/world-dealer-media.css' %}" />
-        <!-- End  Template files -->
-        <!-- Start blueimp  -->
-        <link rel="stylesheet" href="{% static 'assets/css/blueimp-gallery.min.css' %}" />
-        <!-- End blueimp  -->
-        <!-- Start JS MAP  -->
-        <link rel="stylesheet" href="{% static 'assets/css/map.css' %}" />
-        <!-- End JS MAP  -->
-        <!-- Start footable-jquery -->
-        <link rel="stylesheet" href="{% static 'assets/libraries/footable-jquery/css/footable.bootstrap.min.css' %}" />
-        <!-- End footable-jquery -->
-        <!-- Start custom styles  -->
-        <link rel="stylesheet" href="{% static 'assets/css/custom.css' %}" />
-        <!-- End custom styles  -->
-        <script src="{% static 'assets/js/modernizr.custom.js' %}"></script>
-        <link rel="stylesheet" href="{% static 'assets/libraries/nouislider/nouislider.css' %}" />
-    </head>
+<head>
+ <meta charset="utf-8"/>
+ <title>
+  Autobuy Nigeria
+ </title>
+ <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
+ <link href="{% static 'assets/img/favicon.ico' %}" rel="icon" type="image/x-icon"/>
+ <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css"/>
+ <link href="{% static 'assets/libraries/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet"/>
+ <!--[if lt IE 10]>
+       <link rel="stylesheet"  href="assets/css/ie-fix.css" />
+       <![endif]-->
+ <!-- Start BOOTSTRAP -->
+ <link href="{% static 'assets/libraries/tether/dist/css/tether.min.css' %}" rel="stylesheet"/>
+ <link href="{% static 'assets/libraries/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet"/>
+ <link href="{% static 'assets/css/bootstrap-select.min.css' %}" rel="stylesheet"/>
+ <link href="{% static 'assets/libraries/bootstrap-colorpicker-master/dist/css/bootstrap-colorpicker.min.css' %}" rel="stylesheet"/>
+ <!-- End Bootstrap -->
+ <!-- Start Template files -->
+ <link href="{% static 'assets/css/world-dealer.css' %}" rel="stylesheet"/>
+ <link href="{% static 'assets/css/world-dealer-media.css' %}" rel="stylesheet"/>
+ <!-- End  Template files -->
+ <!-- Start blueimp  -->
+ <link href="{% static 'assets/css/blueimp-gallery.min.css' %}" rel="stylesheet"/>
+ <!-- End blueimp  -->
+ <!-- Start custom styles  -->
+ <link href="{% static 'assets/css/custom.css' %}" rel="stylesheet"/>
+ <!-- End custom styles  -->
+ <script src="{% static 'assets/js/modernizr.custom.js' %}">
+ </script>
+ <!-- Start codemirror  -->
+ <link href="{% static 'assets/libraries/codemirror/lib/codemirror.css' %}" rel="stylesheet"/>
+ <!-- End codemirror  -->
+ <link href="{% static 'assets/libraries/nouislider/nouislider.css' %}" rel="stylesheet"/>
+</head>
     <body>
         <header class="header container container-palette affix-menu">
             <div class="top-bar color-primary">
